--- a/hive-service/src/main/webapp/WEB-INF/web.xml
+++ b/hive-service/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>HIVE_APP</display-name>
 	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>HIVE_SERVICE.root</param-value>
+	</context-param>
+	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:log4j.properties</param-value>
 	</context-param>
