--- a/hive-common/pom.xml
+++ b/hive-common/pom.xml
@@ -24,11 +24,16 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context</artifactId>
 	</dependency>
-	    <!-- redis start--> 
+	
 	<dependency>
 		<groupId>redis.clients</groupId>
 		<artifactId>jedis</artifactId>
 	</dependency>
-	<!-- redis end -->
+	
+	<dependency>
+	    <groupId>commons-lang</groupId>
+	    <artifactId>commons-lang</artifactId>
+	    <version>2.6</version>
+	</dependency>
   </dependencies>
 </project>
