--- a/hive-service/.settings/org.eclipse.core.resources.prefs
+++ b/hive-service/.settings/org.eclipse.core.resources.prefs
@@ -5,4 +5,7 @@ encoding//src/main/resources/jdbc.properties=UTF-8
 encoding//src/main/resources/log4j.properties=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
+encoding//src/test/resources/jdbc.properties=UTF-8
+encoding//src/test/resources/log4j.properties=UTF-8
+encoding//src/test/resources/redis.properties=UTF-8
 encoding/<project>=UTF-8
