--- a/hive-service/src/main/resources/log4j.properties
+++ b/hive-service/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.console.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
 ##把日志信息输出到文件
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.Threshold=ERROR
-log4j.appender.file.File=./logs/mylog.log
+log4j.appender.file.File=F:/mylog.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%d]-%-5p (%F:%L)|%m%n
 log4j.appender.file.DatePattern='.'yyyy-MM-dd
